--- a/etucks-pages/package.json
+++ b/etucks-pages/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^6.1.1",
     "katex": "^0.16.9",
     "marked": "^11.1.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
