--- a/etucks-pages/package.json
+++ b/etucks-pages/package.json
@@ -21,6 +21,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-math": "^6.0.0",
+    "remark-prism": "^1.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
